--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
   
 <body>
-  <header>
+  <header class="flex-container">
     <h1>THE SKIES OF MOUNT RAINIER</h1>
   </header> 
   <article>
     <img class="rainier" src="images/rainier.jpg" alt="Picture of Mt Rainier and skyline" title="MOUNT RAINIER">
+    <h3>&copy; 2018</h3>
     
     <div class="section group">
       <form name="custInfo" onsubmit="capture()">
@@ -36,8 +37,12 @@
             <input class="button" type="submit">
         </div>
       </form>
-    </div>    
+    </div>
   </article>
+  <h4>SEE BELOW FOR MORE PICS!</h4>
+  <footer>
+    
+  </footer>
 </body> 
   
 </html>
