Alt tag to footer image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h4>SEE BELOW FOR MORE PICS!</h4>
   </section>
   
-  <footer>
+  <footer class="mt-rainier" title="MT-Rainier">
   </footer>
 </body> 
   
